// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Self referencing type 1`] = `"Currently do not support self-referencing types: m1"`;

exports[`dependency multi file 1`] = `
Object {
  "inScope": EntityMap {
    "map": Map {
      "m1" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 2,
                "startColNumber": 15,
                "startLineNumber": 1,
              },
              "name": "d",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                },
              },
            },
          ],
        },
        "file": FileLocation {
          "dir": "",
          "fullname": "conduit_a.cdt",
          "name": "conduit_a.cdt",
        },
        "kind": "Struct",
        "loc": Object {
          "endColNumber": 15,
          "endLineNumber": 1,
          "startColNumber": 0,
          "startLineNumber": 0,
        },
        "name": "m1",
      },
      "m2" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 10,
                "endLineNumber": 3,
                "startColNumber": 15,
                "startLineNumber": 2,
              },
              "name": "m",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                },
              },
            },
          ],
        },
        "file": FileLocation {
          "dir": "",
          "fullname": "conduit_b.cdt",
          "name": "conduit_b.cdt",
        },
        "kind": "Struct",
        "loc": Object {
          "endColNumber": 15,
          "endLineNumber": 2,
          "startColNumber": 0,
          "startLineNumber": 0,
        },
        "name": "m2",
      },
    },
    "size": 2,
  },
}
`;

exports[`function with invalid return type 1`] = `"Could not find a Struct named SomeType"`;

exports[`function with unknown types 1`] = `"Unable to find end of entity for UnaryParameter at , b: Foreign.Type) {"`;

exports[`simple echo function 1`] = `
Object {
  "inScope": EntityMap {
    "map": Map {
      "Shout" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 3,
                "startColNumber": 18,
                "startLineNumber": 2,
              },
              "name": "m",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                },
              },
            },
          ],
        },
        "file": FileLocation {
          "dir": "",
          "fullname": "conduit_a.cdt",
          "name": "conduit_a.cdt",
        },
        "kind": "Struct",
        "loc": Object {
          "endColNumber": 18,
          "endLineNumber": 2,
          "startColNumber": 0,
          "startLineNumber": 0,
        },
        "name": "Shout",
      },
      "echo" => Object {
        "body": Object {
          "kind": "FunctionBody",
          "loc": Object {
            "endColNumber": 35,
            "endLineNumber": 6,
            "startColNumber": 34,
            "startLineNumber": 6,
          },
          "statements": Array [
            Object {
              "differentiate": [Function],
              "kind": "Statement",
            },
          ],
        },
        "kind": "Function",
        "loc": Object {
          "endColNumber": 17,
          "endLineNumber": 6,
          "startColNumber": 5,
          "startLineNumber": 4,
        },
        "method": "POST",
        "name": "echo",
        "parameter": Object {
          "differentiate": [Function],
          "kind": "Parameter",
        },
        "returnType": Object {
          "kind": "CustomType",
          "modification": "none",
          "type": "Shout",
        },
      },
    },
    "size": 2,
  },
}
`;

exports[`simple multi file 1`] = `
Object {
  "inScope": EntityMap {
    "map": Map {
      "m1" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 2,
                "startColNumber": 15,
                "startLineNumber": 1,
              },
              "name": "d",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                },
              },
            },
          ],
        },
        "file": FileLocation {
          "dir": "",
          "fullname": "conduit_a.cdt",
          "name": "conduit_a.cdt",
        },
        "kind": "Struct",
        "loc": Object {
          "endColNumber": 15,
          "endLineNumber": 1,
          "startColNumber": 0,
          "startLineNumber": 0,
        },
        "name": "m1",
      },
      "m2" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 3,
                "startColNumber": 15,
                "startLineNumber": 2,
              },
              "name": "d",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                },
              },
            },
          ],
        },
        "file": FileLocation {
          "dir": "",
          "fullname": "conduit_b.cdt",
          "name": "conduit_b.cdt",
        },
        "kind": "Struct",
        "loc": Object {
          "endColNumber": 15,
          "endLineNumber": 2,
          "startColNumber": 0,
          "startLineNumber": 0,
        },
        "name": "m2",
      },
      "m3" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "kind": "Field",
              "loc": Object {
                "endColNumber": 11,
                "endLineNumber": 6,
                "startColNumber": 15,
                "startLineNumber": 5,
              },
              "name": "m",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                },
              },
            },
          ],
        },
        "file": FileLocation {
          "dir": "",
          "fullname": "conduit_b.cdt",
          "name": "conduit_b.cdt",
        },
        "kind": "Struct",
        "loc": Object {
          "endColNumber": 15,
          "endLineNumber": 5,
          "startColNumber": 5,
          "startLineNumber": 4,
        },
        "name": "m3",
      },
    },
    "size": 3,
  },
}
`;
